Fixed overflow issue for landing page

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -4,14 +4,13 @@
 } */
 
 .card {
-    position: absolute;
-    height: 30%;
-    width: 18%;
+    height: 200px;
+    width: 100%;
+    min-width: 200px;
     align-items: start;
     justify-content: center;
     transform-style: preserve-3d;
     transition: all 0.2s ease;
-    margin-bottom: 25px;
     border-radius: 18px;
     cursor: pointer;
 }
